socialNetwork/helm-chart/socialnetwork-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: socialnetwork-gateway
  namespace: social-network
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: socialnetwork-route
  namespace: social-network
spec:
  parentRefs:
  - name: socialnetwork-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-thrift
      port: 8080
